# cpp_workout

./: .gitignore  hierarchy_mutex.cc
cpp_memory_model/: automic_conditions.cc  conditional_variables.cc  spin_lock.cc  test_atomics.cc  test_cas.cc
effective_cpp/: alias.cc  enum_test.cc  enumrator.cc  gadget.h  initialization.cc  initialization.cc~  nullptr.cc  random_generator.h  test_make_shared.cc  universal_references.cc  widget.cc  widget.h
effective_cpp/avoid_overloading_on_universal_references/: main.cc
effective_cpp/hacking_lambda/: main.cc
effective_cpp/lambda_hacking/: closure_copy.cc  generic_lambda.cc  lambda_init_capture.cc  lambda_pitfalls.cc  test.cc
effective_cpp/memory_model/: acquire_release_spinlock.cc  acquire_release_transitivity.cc  aquire_release_trap.cc  memory_fence.cc  memory_order_consume.cc  sequentail_consistency.cc
effective_cpp/meta_programming/: ref_collapsing.cc  test_constexpr.cc  test_move.cc  test_type_traits.cc
effective_cpp/old_hacking/: alias.cc  allocator.cc  delete.cc  override.cc  random_gen.cc  test_map.cc  test_move.cc  test_move_and_forward.cc  test_widget.cc
hacking_metaprogramming/: main.cc  power.cc
mordern_cpp_on_the_fly/: containers.cxx  the_great_auto.cc  thread.cc
mordern_cpp_on_the_fly/lock_in_linux/: mutex.c  read_write_lock.c  spin_lock.c
multi_threading/: ch1.cc  list_protect.cc  posix_file_wrapper.cc  test_lazy_initialize.cc  test_posix.txt  test_scoped_lock.cc  test_stack_schedule.cc  test_unique_lock.cc  thread_argument_pass.cc  thread_management.cc
multi_threading/modern_cpp_concurrency/: hierarchy_mutex.cc  list_protect.cc  parallel_accumulate.cc  posix_file_wrapper.cc  raii.cc  test_async_and_futures.cc  test_mutex_ownership_trans.cc  test_notify_one.cc  test_stack_schedule.cc  test_std_lock.cc  test_swap.cc  (+2 more)
zeromq_project/: CMakeLists.txt
zeromq_project/services/: CMakeLists.txt  ice_publisher.cc
